wx_jiekou测试完成，引入api模块“rest_framework”

--- a/daniu_wechat/project.private.config.json
+++ b/daniu_wechat/project.private.config.json
@@ -1,5 +1,5 @@
 {
-  "projectname": "wechat_widget_interface-master",
+  "projectname": "daniu_wechat",
   "setting": {
     "compileHotReLoad": true
   },
