已实现小程序传参、跳转及数据展示，富文本格式待处理。

--- a/daniu_wechat/app.json
+++ b/daniu_wechat/app.json
@@ -1,13 +1,11 @@
 {
   "pages": [
+    "pages/detail/detail",
 
     "pages/index/index",
-    "pages/detail/detail",
     "pages/sorts/sorts",
-    "pages/main/main",
-    "pages/logs/logs",
-    "pages/home/home",
-    "pages/resume/resume"
+    "pages/resume/resume",
+    "pages/logs/logs"
   ],
   "window": {
     "backgroundTextStyle": "dark",
