--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,27 @@
+asgiref==3.5.2
+beautifulsoup4==4.11.1
+bleach==5.0.1
+bs4==0.0.1
+click==8.1.3
+colorama==0.4.6
 Django==4.0.5
+django-contrib-comments==2.2.0
+django-simpleui==2022.7.29
+django-summernote==0.8.20.0
+djangorestframework==3.14.0
+Flask==2.2.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+Pillow==9.2.0
+pycryptodome==3.15.0
+PyMySQL==1.0.2
+pytz==2022.6
 pywin32==304
-
-PyMySQL~=1.0.2
+router==0.1
+six==1.16.0
+soupsieve==2.3.2.post1
+sqlparse==0.4.3
+tzdata==2022.4
+webencodings==0.5.1
+Werkzeug==2.2.2
