--- a/daniu_wechat/project.config.json
+++ b/daniu_wechat/project.config.json
@@ -14,7 +14,7 @@
     "lazyloadPlaceholderEnable": false,
     "preloadBackgroundData": false,
     "autoAudits": false,
-    "uglifyFileName": false,
+    "uglifyFileName": true,
     "uploadWithSourceMap": true,
     "enhance": true,
     "useMultiFrameRuntime": true,
